--- a/clase1/clase1_1_materia.ipynb
+++ b/clase1/clase1_1_materia.ipynb
@@ -223,6 +223,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('7+2: ')\n",
+    "print(7+2) \n",
+    "print('7-2: ') \n",
+    "print(7-2)  \n",
+    "print('7*2: ')\n",
+    "print(7*2)  \n",
+    "print('7/2: ')\n",
+    "print(7/2)  \n",
+    "print('7**2 (elevado): ')\n",
+    "print(7**2) \n",
+    "print('7//2 (división parte entera): ')\n",
+    "print(7//2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +259,7 @@
     "print(\"2+2\")  # Muestra '2+2' como texto\n",
     "\n",
     "# Concatenara '2+2' como texto\n",
-    "print(\"2+2\")  # Muestra '2+2' como texto\n",
+    "print(\"2\"+\"2\")  # Muestra '2+2' como texto\n",
     "\n",
     "# Esto calculará la suma antes de imprimir\n",
     "print(2+2)  # Calcula 2+2 y muestra 4\n"
@@ -247,20 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2+2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Concatenara '2+2' como texto\n",
     "print(\"2+2\")  # Muestra '2+2' como texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenara \"2\"+\"2\"\" como texto\n",
+    "print(\"2\"+\"2\")  # Muestra '22' como texto"
    ]
   },
   {
@@ -321,24 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n",
-      "Continúa en una nueva línea\n",
-      "\n",
-      "Hello, World! Continúa en la misma línea\n",
-      "\n",
-      "Hello, World! y no hay espacio entre estas frases.\n",
-      "\n",
-      "Hello, World!- Estas frases están separadas por un guion.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ejemplo de uso de print sin modificar el salto de línea\n",
     "print('Hello, World!')\n",
@@ -375,17 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mi primer Hola Mundo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Mi primer Hola Mundo')"
    ]
@@ -429,6 +428,15 @@
    "source": [
     "print('Escribe otra cosa abajo')\n",
     "input()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusiones\n",
+    "\n",
+    "El comando input es una herramienta poderosa para hacer que tus programas sean interactivos. Permite a los usuarios proporcionar información en tiempo real, que puede ser esencial para la funcionalidad del programa. En las próximas secciones, aprenderemos cómo tomar esta entrada y usarla más efectivamente mediante la asignación a variables y otros métodos de procesamiento."
    ]
   },
   {
