--- a/clase1/clase1_2_ejercicios.ipynb
+++ b/clase1/clase1_2_ejercicios.ipynb
@@ -11,6 +11,7 @@
     "Escribe un programa que imprima el siguiente texto exactamente como se muestra:\n",
     "\n",
     "Hola\n",
+    "\n",
     "como estas?, Yo estoy bien\n",
     "\n",
     "mi nombre es\n",
@@ -34,12 +35,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Escribe un programa que imprima el siguiente texto exactamente como se muestra:\n",
+    "Sin escribir este código directamente en el programa. Indicame que apareceria en la pantalla.\n",
     "\n",
     "```python\n",
     "print(\"22\"*7)\n",
     "print(5*21)\n",
     "print(\"3*47\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modifica el siguieten código para que en vez de escribir\n",
+    "\n",
+    "\n",
+    "Vista de la salida\n",
+    "\n",
+    "Hola\n",
+    "\n",
+    "Mundo\n",
+    "\n",
+    "Nueva Respuesta\n",
+    "\n",
+    "Hola_Mundo\n",
+    "\n",
+    "NO BORRAR NADA DEL CODIGO ORIGINAL SOLAMENTE AGREGAR\n"
    ]
   },
   {
@@ -51,12 +72,9 @@
     }
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "Crea un código que imprima \"Hola\", luego \"Esperando\", espera que el usuario presione Enter y finalmente imprime \"Hiciste click\"."
+   ]
   },
   {
    "cell_type": "code",
@@ -67,7 +85,29 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribe tu código aquí"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escribe un programa que solicite al usuario escribir algo por consola cinco veces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Escribe tu código aquí"
+   ]
   }
  ],
  "metadata": {
