--- a/clase1/clase1_2_ejercicios.ipynb
+++ b/clase1/clase1_2_ejercicios.ipynb
@@ -73,6 +73,24 @@
    },
    "outputs": [],
    "source": [
+    "# Código\n",
+    "\n",
+    "print('Hola')\n",
+    "print('Mundo')\n",
+    "\n",
+    "# Haz que diga \"Hola_Mundo\" sin modificar el código anterior\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "Crea un código que imprima \"Hola\", luego \"Esperando\", espera que el usuario presione Enter y finalmente imprime \"Hiciste click\"."
    ]
   },
@@ -93,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Escribe un programa que solicite al usuario escribir algo por consola cinco veces."
+    "Escribe un programa que solicite al usuario escribir algo por consola cinco veces cualquier texto."
    ]
   },
   {
